--- a/style-index.css
+++ b/style-index.css
@@ -34,7 +34,7 @@
 }
 
 .nav-side{
-    background-color: #90A955;
+    background-color: #865cad;
     width: 80px;
     height: 60px;
     float: left;
