--- a/style-about.css
+++ b/style-about.css
@@ -25,7 +25,7 @@
     height: 350px;
     width: 272.89px;
     float: left;
-    background-image: url(images/profile.jpeg);
+    background-image: url(Images/profile.png);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     position: absolue;
