--- a/style-main.css
+++ b/style-main.css
@@ -11,14 +11,14 @@
     --color-secondary: #571298;
     --color-tertiary: #865cad;
     --color-quartiary: #b89ad4;
-    --color-cinq: #dccaee;
+    --color-cinq: #e7dfef;
     
     --color-secondary-dark: #430a77;
     --color-secondary-darkest: #111a0a;
 
     --color-secondary-light: #eaeaea;
     --color-secondary-lightest: #d2d2d2;
-    --color-arb:  #dbd2e4;
+    --color-arb:  #eae5ef;
     
     /*background colors*/
     --color-backup-one: #ffffdb;
