--- a/style-index.css
+++ b/style-index.css
@@ -1,7 +1,7 @@
 .header{
     width: 700px;
     height: 55px;
-    background-color:   #eae4f0;
+    background-color:   #f0ebf4;
     background-size: cover;
     background-position: center;
     overflow: hidden;
