--- a/style-proj.css
+++ b/style-proj.css
@@ -53,21 +53,23 @@
 }
 
 .projects-wrapper h4{
-    width: 200px;
+    width: 150px;
     color: var(--color-secondary-darkest);
     margin-bottom: 0.3vw;
     font-size: 12px;
+    text-align: center;
 }
 
 .projects-wrapper h5{
     background-color: #ffffff;
-    padding: 10px;
-    margin-right: 20px;
+    padding: 5px;
+    margin-right: 30px;
     opacity: 0.5;
     font-weight: 500;
     font-size: 10px;
     border-radius: 10px;
-    width: 200px;
+    width: 150px;
+    text-align: center;
 }
 
 .projects-wrap h6{
