--- a/style-main.css
+++ b/style-main.css
@@ -11,7 +11,7 @@
     --color-secondary: #571298;
     --color-tertiary: #865cad;
     --color-quartiary: #b89ad4;
-    --color-cinq: #e7dfef;
+    --color-cinq: #f1e7fa;
     
     --color-secondary-dark: #430a77;
     --color-secondary-darkest: #111a0a;
