--- a/style-proj.css
+++ b/style-proj.css
@@ -53,7 +53,7 @@
 }
 
 .projects-wrapper h4{
-    width: 150px;
+    width: 250x;
     color: var(--color-secondary-darkest);
     margin-bottom: 0.3vw;
     font-size: 12px;
@@ -68,7 +68,7 @@
     font-weight: 500;
     font-size: 10px;
     border-radius: 10px;
-    width: 150px;
+    width: 250px;
     text-align: center;
 }
 
