--- a/style-proj.css
+++ b/style-proj.css
@@ -20,7 +20,7 @@
 }
 
 .projects-desc{
-    text-align:left;
+    text-align:center;
     width: 250px;
 }
 
@@ -34,6 +34,7 @@
     border-radius: 10px;
     background-color: rgba(255,255,255,0.5);
     padding: 5px;
+    align-items: center;
 }
 
 .projects-wrapper h1{
