--- a/style-main.css
+++ b/style-main.css
@@ -135,7 +135,7 @@ a:visited{
     background-color: var(--color-cinq);
     width: 800px;
     height: 600px;
-    overflow: hidden;
+    overflow: clip;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
