--- a/style-index.css
+++ b/style-index.css
@@ -1,7 +1,8 @@
+
 .header{
     width: 700px;
     height: 55px;
-    background-color:   #cec9d2;
+    background-color:  #e6e5ea;
     background-size: cover;
     background-position: center;
     overflow: hidden;
