--- a/style-about.css
+++ b/style-about.css
@@ -25,7 +25,7 @@
     height: 350px;
     width: 272.89px;
     float: left;
-    background-image: url(Images/profile.png);
+    background-image: url(images/profile.jpeg);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     position: absolue;
@@ -42,7 +42,8 @@
 }
 
 .abt-layout{
-    width: 100px; 
+    width: 100px;
+
 }
 
 
@@ -94,7 +95,6 @@
     width: min-content;
     margin: auto;
     animation: float 2s infinite linear;
-    align-items: center;
     
 }
   
