--- a/style-main.css
+++ b/style-main.css
@@ -29,7 +29,6 @@
 
     --padding-border: 255,255,255;
 }
-
 .main{
     width: 100%;
     height: 100%;
@@ -37,7 +36,7 @@
 
 #main {
     padding: 80px;
-    width: 600px;
+    width: 540px;
     position: absolute;
     right: calc(50% - 300px);
     transform: translateY(-50%);
@@ -51,8 +50,8 @@
     background-color: rgba(var(--padding-border),0.3);
     border: 1px solid rgba(var(--padding-border),0.6);
     backdrop-filter: blur(2px);
-    height: 300px;
-    width: 300px;
+    height: 570px;
+    width: 660px;
     position: fixed;
     right: calc(50% - 440px);
     transform: translateY(-50%);
@@ -133,9 +132,9 @@ a:visited{
 .content{
     border: 20px solid var(--color-cinq);
     background-color: var(--color-cinq);
-    width: 800px;
-    height: 600px;
-    overflow: clip;
+    width: 660px;
+    height: 500px;
+    overflow: hidden;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -189,10 +188,6 @@ img {
     background-clip: padding-box;   
 }
 
-.carousel{
-    color: #571298;
-    font-weight: 500;
-}
 .wavy{
     display: inline-block;
 }
@@ -203,4 +198,8 @@ img {
     background: rgba(0, 135, 0, 0);
     position: relative;
 
+}
+.carousel{
+    color: #571298;
+    font-weight: 500;
 }
