--- a/style-proj.css
+++ b/style-proj.css
@@ -2,7 +2,7 @@
     margin: 1vw;
     margin-top: 0vw;
     margin-bottom: 2vw;
-    text-align: left;
+    text-align: center;
     width: 645px;
     height: 500px;
 }
@@ -20,7 +20,7 @@
 }
 
 .projects-desc{
-    text-align:left;
+    text-align:center;
     width: auto;
 }
 
@@ -30,7 +30,7 @@
 }
 
 .projects-img{
-    height: 14vw;
+    height: 12vw;
     border-radius: 10px;
     background-color: rgba(255,255,255,0.5);
     padding: 5px;
@@ -57,6 +57,7 @@
     color: var(--color-secondary-darkest);
     margin-bottom: 0.3vw;
     font-size: 12px;
+    text-align: center;
 }
 
 .projects-wrapper h5{
@@ -68,6 +69,7 @@
     font-size: 10px;
     border-radius: 10px;
     width: 150px;
+    text-align: center;
 }
 
 .projects-wrap h6{
